[package]
name = "aoc_2018"
version = "2.0.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
description = "Solver for Advent of Code 2018"
edition = "2018"

[dependencies]
toml = "0.4.2"
ron = "0.4.0"
xdg = "2.2.0"
hex = "0.3.2"
serde = "1.0.80"
serde_derive = "1.0.80"
clap = "2.32.0"
hyper = "0.12.16"
reqwest = "0.9.5"
indicatif = "0.10.2"
aoc_base = { path="aoc_base" }
aoc_2018_day1 = { path="day1" }
aoc_2018_day2 = { path="day2" }
aoc_2018_day3 = { path="day3" }
aoc_2018_day4 = { path="day4" }
aoc_2018_day5 = { path="day5" }
aoc_2018_day6 = { path="day6" }
aoc_2018_day7 = { path="day7" }
